2006-12-14  Brian Bidulock  <bidulock@openss7.org>

	- debian script corrections from Michael Fig <fig@marketsystems.com>

	* debian/mscript_postinst.in: debian script corrections
	* debian/mscript_postrm.in: debian script corrections
	* debian/mscript_preinst.in: debian script corrections
	* debian/rules.in: debian script corrections
	* debian/strisdn-devel.preinst.in: debian script corrections

2006-10-30  Brian Bidulock  <bidulock@openss7.org>

	* tests/local.at: added ability to sync between test cases

2006-10-21  Brian Bidulock  <bidulcok@openss7.org>

	* doc/manual/releases.texi: updated LiS release number

2006-10-16  Brian Bidulock  <bidulcok@openss7.org>

	- started off this new STREAMS ISDN package

	* ChangeLog: added new package file
	* AUTHORS: added new package file
	* Makefile.am: added new package file
	* NEWS: added new package file
	* README: added new package file
	* THANKS: added new package file
	* acinclude.m4: added new package file
	* configure.ac: added new package file
	* configure.nexusware: added new package file
	* strisdn.gif: added new package file
	* strisdn.lsm.in: added new package file
	* strisdn.spec.in: added new package file
	* strisdn.tif: added new package file
	* strisdn.xcf: added new package file
	* strisdn.xpm: added new package file
	* debian/README.Debian: added new package file
	* debian/TODO.Debian: added new package file
	* debian/changelog: added new package file
	* debian/control.in: added new package file
	* debian/copyright: added new package file
	* debian/mscript_header.in: added new package file
	* debian/mscript_postinst.in: added new package file
	* debian/mscript_postrm.in: added new package file
	* debian/mscript_preinst.in: added new package file
	* debian/mscript_prerm.in: added new package file
	* debian/rules.in: added new package file
	* debian/strisdn-core.postinst.in: added new package file
	* debian/strisdn-core.postrm.in: added new package file